--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -1,3 +1,9 @@
-a {	color: orange; }
-
-h1 { font-family: 'Ubuntu', arial, serif; font-size: 30px; }
+a {
+	color: orange; 
+}
+h1 { 
+	font-family: 'Ubuntu', arial, serif; font-size: 30px; 
+}
+#secondNav{
+	float:right;
+}
