--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -88,11 +88,12 @@ ul, li {
 	background: #003d4c;
 	font-weight: normal;
 	text-decoration: none;
+	font-size: 25px;
 }
 #header h1 a:hover {
 	color: #fff;
 	background: #003d4c;
-	text-decoration: underline;
+	text-decoration: none;
 }
 #content{
 	background: #fff;
