--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -36,3 +36,44 @@ div.fLeft{float:left;}
 .habtmSelector select[multiple]{
 	width: 400px;
 }
+
+ul.projects{
+	list-style:none;
+	margin:0;
+}
+ul.projects li{
+	margin: 0;
+}
+ul.projects li > div.project,
+div.projMgmt{
+	margin-top:10px;
+	font-weight:normal;
+	padding: 4px 8px;
+	color:#333;
+	border:1px solid #888;
+	-webkit-border-radius:8px;
+	   -moz-border-radius:8px;
+		    border-radius:8px;
+	text-decoration:none;
+	text-shadow: #fff 0px 1px 0px;
+	min-width: 0;
+	background: #e6e6e6; /* Old browsers */
+	background: -moz-linear-gradient(top,  #e6e6e6 0%, #f5f5f5 50%, #f2f2f2 51%, #f9f9f9 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e6e6e6), color-stop(50%,#f5f5f5), color-stop(51%,#f2f2f2), color-stop(100%,#f9f9f9)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #e6e6e6 0%,#f5f5f5 50%,#f2f2f2 51%,#f9f9f9 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #e6e6e6 0%,#f5f5f5 50%,#f2f2f2 51%,#f9f9f9 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #e6e6e6 0%,#f5f5f5 50%,#f2f2f2 51%,#f9f9f9 100%); /* IE10+ */
+	background: linear-gradient(top,  #e6e6e6 0%,#f5f5f5 50%,#f2f2f2 51%,#f9f9f9 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6e6e6', endColorstr='#f9f9f9',GradientType=0 ); /* IE6-9 */
+	overflow: hidden;
+}
+ul.projects div.actions{
+	width: auto;
+	float: right;
+}
+div.projMgmt{
+	min-height: 100px;
+}
+div.projMgmt h3 a{
+	text-decoration: none;
+}
