Made more visual changes to reflect mocks.

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -23,6 +23,7 @@ div.c50{width:48%;}
 div.c60{width:55%;}
 div.c70{width:65%;}
 div.c75{width:72%;}
+div.c80{width:75%;}
 
 div.c10,div.c20,div.c25, div.c30, div.c40, div.c50, div.c60, div.c70, div.c75{
 	overflow:hidden; float:left; margin-right:1%;
