Minor look and feel changes

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -25,7 +25,7 @@ div.c70{width:65%;}
 div.c75{width:72%;}
 div.c80{width:75%;}
 
-div.c10,div.c20,div.c25, div.c30, div.c40, div.c50, div.c60, div.c70, div.c75{
+div.c10,div.c20,div.c25, div.c30, div.c40, div.c50, div.c60, div.c70, div.c75, div.c80{
 	overflow:hidden; float:left; margin-right:1%;
 }
 div.colContainer{overflow:hidden; }
@@ -96,3 +96,5 @@ div#progressIndicator span#progressTxt{
 	font-weight: bold;
 	float:right;
 }
+
+div.actions.c80{width:70%;}
