--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -146,7 +146,7 @@ label, input[type=button], input[type=submit], button { cursor: pointer; }
 
 /* colors for form validity */
 input:valid   {  }
-input:invalid, input.error { 
+input:invalid, input.error, select.error { 
       border-radius: 1px;
     -moz-box-shadow: 0px 0px 5px red; 
  -webkit-box-shadow: 0px 0px 5px red; 
