--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -158,10 +158,10 @@ div.launch{
 .filterValue div{
 	display:inline;
 }
-.numberOfMembers label, .filterValue label{
+.numberOfTeams label, .filterValue label, .numEachTeam label{
 	display:inline;
 }
-.numberOfMembers input, .filterValue input{
+.numberOfTeams input, .filterValue input, .numEachTeam input{
 	min-width: 0; 
 	width: 50px; height: 20px; padding: 2px;
 	display:inline;
