--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -195,3 +195,19 @@ div.launch{
 }
 
 .teams_make #log{ width: 80%; background: #ccc;}
+.teams_make .logContainer{margin-top: 30px;}
+
+#teamsContainer, .teamsContainer{margin-top: 30px;}
+
+.team{margin-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #ccc;}
+.team .member{
+	float:left; width: 100px; height: 60px; margin-right:3px; padding: 5px;
+}
+
+.team .teamNum{ font-weight: bold;}
+.team .satisfyingRules, .team .teamMembers{margin-top: 10px;}
+
+.team .teamMembers{padding: 5px 0; overflow-x:scroll;}
+.team .member{font-size: 10px;}
+.team .member .name{font-weight: bold;}
+.team .member .rules{margin-top: 5px;}
